--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.8"
 pytest = "^5.2"
 flake8 = "^3.7.9"
 black = {version = "^19.10b0", allow-prereleases = true}
+pytest-cov = "^2.8.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
