--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ authors = ["Alex Bielen <alex.bielen@twobulls.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+python-rtmidi = "^1.3.1"
+click = "^7.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
