--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pytest = "^5.2"
 flake8 = "^3.7.9"
 black = {version = "^19.10b0", allow-prereleases = true}
 pytest-cov = "^2.8.1"
+pytest-mock = "^2.0.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
