--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ flake8 = "^3.7.9"
 black = {version = "^19.10b0", allow-prereleases = true}
 pytest-cov = "^2.8.1"
 pytest-mock = "^2.0.0"
+rope = "^0.17.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
