--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,9 @@ authors = ["Alex Bielen <alex.bielen@twobulls.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-python-rtmidi = "^1.3.1"
 click = "^7.0"
+ortools = "^7.8.7959"
+python-rtmidi = "^1.4.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
