--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,30 @@
 [tool.poetry]
+authors = ["Alex Bielen <alex.bielen@twobulls.com>"]
+description = ""
 name = "allegro"
 version = "0.1.0"
-description = ""
-authors = ["Alex Bielen <alex.bielen@twobulls.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
-python-rtmidi = "^1.3.1"
 click = "^7.0"
+ortools = "^7.8.7959"
+python = "^3.8"
+python-rtmidi = "^1.4.5"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
-flake8 = "^3.7.9"
 black = {version = "^19.10b0", allow-prereleases = true}
+flake8 = "^3.7.9"
+pytest = "^6.0"
 pytest-cov = "^2.8.1"
-pytest-mock = "^2.0.0"
+pytest-mock = "^3.0.0"
 rope = "^0.17.0"
 
+[tool.pytest.ini_options]
+addopts = "-ra --durations=0 --cov=allegro"
+minversion = "6.0"
+testpaths = [
+  "tests",
+]
+
 [build-system]
-requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+requires = ["poetry>=0.12"]
