--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ ortools = "9.1.9490"
 python = "^3.9"
 python-rtmidi = "^1.4.9"
 click = "^8.0.3"
+more-itertools = "^8.11.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.11b1"
