--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,24 +1,19 @@
 [tool.poetry]
 authors = ["Alex Hendrie Bielen <alexhendriebielen@gmail.com>"]
-description = "Tools for alogorithmic composition."
-license = "MIT"
+description = ""
 name = "allegro"
 version = "0.1.0"
 
 [tool.poetry.dependencies]
-ortools = "9.1.9490"
-python = "^3.9"
-python-rtmidi = "^1.4.9"
-click = "^8.0.3"
-more-itertools = "^8.11.0"
+python = ">=3.10,<4.0"
+music21 = "^9.1.0"
 
 [tool.poetry.dev-dependencies]
-black = "^21.11b1"
-flake8 = "^4.0.1"
-pytest = "^6.2.5"
-pytest-cov = "^3.0.0"
-pytest-mock = "^3.6.1"
-rope = "^0.22.0"
+black = "^23.3.0"
+flake8 = "^6.0.0"
+pytest = "^7.4.0"
+pytest-cov = "^4.1.0"
+pytest-mock = "^3.11.1"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
