--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,10 @@ name = "allegro"
 version = "0.1.0"
 
 [tool.poetry.dependencies]
-python = ">=3.10,<4.0"
 music21 = "^9.1.0"
+python = ">=3.11,<3.13"
+python-rtmidi = "^1.5.4"
+ortools = "^9.6.2534"
 
 [tool.poetry.dev-dependencies]
 black = "^23.3.0"
