--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ pytest = "^7.4.0"
 pytest-cov = "^4.1.0"
 pytest-mock = "^3.11.1"
 
+[tool.poetry.group.dev.dependencies]
+pytest-xdist = "^3.3.1"
+
 [build-system]
 build-backend = "poetry.core.masonry.api"
 requires = ["poetry-core>=1.0.0"]
