--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,20 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
+      - name: Install Poetry
+        uses: abatilo/actions-poetry@v2
+      - name: Setup local virtual env
+        run: |
+          poetry config virtualenvs.create true --local
+          poetry config virtualenvs.in-project true --local
+      - uses: actions/cache@v3
+        name: Define a virual env cache
+        with:
+          path: ./.venv
+          key: venv-${{ hashFiles('poetry.lock')}}
+
+      - name: Install project dependencies
+        run: poetry install
 
       # - name: Install
       #   uses: abatilo/actions-poetry@v1.1.0
