Add in the automated tests next.
Tags: CI/CD

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,9 +24,10 @@ jobs:
         with:
           path: ./.venv
           key: venv-${{ hashFiles('poetry.lock')}}
-
       - name: Install project dependencies
         run: poetry install
+      - name: Run automated tests
+        run: poetry run python -m pytest --cov=allegro --cov-report=xml tests/
 
       # - name: Install
       #   uses: abatilo/actions-poetry@v1.1.0
