--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,23 +28,10 @@ jobs:
         run: poetry install
       - name: Run automated tests
         run: poetry run python -m pytest --cov=allegro --cov-report=xml tests/
-
-      # - name: Install
-      #   uses: abatilo/actions-poetry@v1.1.0
-      #   with:
-      #     python_version: 3.8.0
-      #     poetry_version: 1.0.0
-      #     args: install
-      # - name: Test
-      #   uses: abatilo/actions-poetry@v1.1.0
-      #   with:
-      #     python_version: 3.8.0
-      #     poetry_version: 1.0.0
-      #     args: run python -m pytest --cov=allegro --cov-report=xml tests/
-      # - name: Upload Coverage
-      #   uses: codecov/codecov-action@v1
-      #   with:
-      #     token: ${{ secrets.CODECOV_TOKEN }}
-      #     file: ./coverage.xml
-      #     name: allegro-coverage
-      #     fail_ci_if_error: true
+      - name: Upload Coverage
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./coverage.xml
+          name: allegro-coverage
+          fail_ci_if_error: false
